<resources>
    <string name="app_name">票e通</string>
    <string name="app_crash">很抱歉,程序出现异常,即将退出.</string>
    <string name="app_network_error">网络链接错误，请查看网络是否已连接!</string>
    <string name="app_exit">再按一次退出程序</string>
    <string name="empty"></string>
    <string name="msg_toast_title">温馨提示</string>
    <string name="msg_system_error">系统异常请联系客服人员!</string>
    <string name="msg_net_error">网络异常，数据加载失败!</string>
    <string name="confirm">确定</string>
    <string name="close">关闭</string>
    <string name="get_back">返回</string>
    <string name="cancel">取消</string>
    <string name="delete">删除</string>
    <string name="previous">上一步</string>
    <string name="next">下一步</string>
    <string name="commit">提交</string>
    <string name="day">天</string>
    <string name="month">月</string>
    <string name="year">年</string>
    <string name="days">%1$s天</string>
    <string name="months">%1$s月</string>
    <string name="months2">%1$s个月</string>
    <string name="years">%1$s年</string>
    <string name="unit_yuan">元</string>
    <string name="unit_percent">%</string>
    <string name="record">记录</string>
    <string name="count">%1$s笔</string>
    <string name="num">%1$s张</string>
    <string name="page_loading">加载中&#8230;</string>
    <string name="apr_percent">%1$s%%</string>
    <string name="default_money">0.00</string>
    <string name="unlimit">无限制</string>
    <string name="line">-</string>
    <string name="yuan">%1$s 元</string>
    <string name="fen">%1$s 份</string>
    <string name="month2">个月</string>
    <string name="empty_zero">0</string>
    <string name="dialog_title">提示</string>
    <string name="dialog_confirm">确定</string>
    <string name="dialog_cancel">取消</string>
    <string name="dialog_calculate_title">计算收益</string>
    <string name="dialog_calculate_income">预估收益(元)</string>
    <string name="dialog_calculate_money">理财金额</string>
    <string name="dialog_bindbank">开户银行</string>
    <string name="dialog_area">选择地区</string>
    <string name="permission_context">为了能更好的使用本应用，请授予如下权限。</string>
    <string name="permission_settings">去设置</string>
    <string name="bottom_tv_home">首页</string>
    <string name="bottom_tv_list">产品列表</string>
    <string name="bottom_tv_mine">我的账户</string>
    <string name="bottom_tv_more">更多</string>
    <string name="msg_title">我的消息</string>
    <string name="msg_delete">确定删除这条消息吗？</string>
    <string name="msg_read_all">全部标记为已读</string>
    <string name="msg_delete_all">批量删除消息</string>
    <string name="msg_select_text">已选中%1$s个</string>
    <string name="msg_delete_confirm">确认删除</string>
    <string name="msg_mark_read">标为已读</string>
    <string name="msg_mark_unread">标为未读</string>
    <string name="product_list_title">产品列表</string>
    <string name="product_new_user">新手专享</string>
    <string name="product_exp">体验标</string>
    <string name="product_lave_time">项目期限 %1$s 天</string>
    <string name="product_lave_time_month">项目期限 %1$s 个月</string>
    <string name="product_lave_time_int">项目期限 %1$d 天</string>
    <string name="product_lave_time_month_int">项目期限 %1$d 个月</string>
    <string name="product_lave1_time">剩余期限 %1$s 天</string>
    <string name="product_lave1_time_month">剩余期限 %1$s 个月</string>
    <string name="product_rate">--预期年化利率--</string>
    <string name="product_rate2">预期年化利率</string>
    <string name="product_borrow_money">借款金额(元)</string>
    <string name="product_return_style">回款方式</string>
    <string name="product_invest_time">发布时间</string>
    <string name="product_invest_range">投资区间</string>
    <string name="product_understand_project">了解项目</string>
    <string name="product_protocol">借款协议</string>
    <string name="product_protocol_bond_in">浏览协议</string>
    <string name="product_invest_record">投资记录</string>
    <string name="product_invest_amount">项目总额(元)</string>
    <string name="product_limit">剩余期限 %1$s 天</string>
    <string name="product_project_share">项目总额 %1$s 元</string>
    <string name="product_start_money">起购金额 %1$s 元</string>
    <string name="product_each_money">每份金额 %1$s 元</string>
    <string name="product_submit">立即投资</string>
    <string name="product_chose_err">只能使用一种理财券</string>
    <string name="product_bond_discount_name">折让率</string>
    <string name="product_bond_amount">债权总价(元)</string>
    <string name="product_invest_title1">投资记录</string>
    <string name="product_invest_title2">转让记录</string>
    <string name="product_sold_out">已售罄</string>
    <string name="product_invest_count">%1$s笔</string>
    <string name="product_time_limit">剩余期限 %1$s 天</string>
    <string name="product_discount_rate">折让率 %1$s</string>
    <string name="product_return_title">还款计划</string>
    <string name="product_had_return">已还款</string>
    <string name="product_no_return">未还款</string>
    <string name="product_borrower_title">产品项目详情</string>
    <string name="product_borrower_info">借款方信息</string>
    <string name="product_username">用户名</string>
    <string name="product_age">年龄</string>
    <string name="product_education">学历</string>
    <string name="product_marriage">婚姻状况</string>
    <string name="product_household_city">户籍城市</string>
    <string name="product_work_time">工作时间</string>
    <string name="product_income_range">收入范围</string>
    <string name="product_had_car">车产</string>
    <string name="product_had_house">房产</string>
    <string name="product_checking_project">审核项目</string>
    <string name="product_state">状态</string>
    <string name="product_pass_time">通过时间</string>
    <string name="product_return_ability">还款能力证明</string>
    <string name="product_credit_report">信用报告</string>
    <string name="product_had_authen">已认证</string>
    <string name="product_no_authen">未认证</string>
    <string name="product_had_marriage">已婚</string>
    <string name="product_no_marriage">未婚</string>
    <string name="product_had">有</string>
    <string name="product_no">没有</string>
    <string name="product_bonddetail_timelave">剩余期限(天)</string>
    <string name="bc_title">银行卡</string>
    <string name="bc_add_card">添加银行卡</string>
    <string name="bc_add">添加</string>
    <string name="bc_isFast">已开通快捷支付</string>
    <string name="bc_toFast">未开通快捷支付</string>
    <string name="bc_notfast">您尚未开通快捷支付</string>
    <string name="bc_tip">温馨提示：请添加相同姓名的银行卡</string>
    <string name="bc_realname">真实姓名</string>
    <string name="bc_realname_hint">请输入您的真实姓名</string>
    <string name="bc_realname_null">真实姓名不能为空</string>
    <string name="bc_realname_error">输入的真实姓名不正确</string>
    <string name="bc_bankname">开户银行</string>
    <string name="bc_bankname_hint">请选择开户银行</string>
    <string name="bc_bankname_null">开户银行不能为空</string>
    <string name="bc_bank_card_num">银行账号</string>
    <string name="bc_bank_card_num_hint">请输入银行账号</string>
    <string name="bc_area">所在地区</string>
    <string name="bc_area_hint">请选择所在地区</string>
    <string name="bc_branch">支行名称</string>
    <string name="bc_branch_hint">请输入支行名称（选填）</string>
    <string name="bc_submit">确认添加</string>
    <string name="submit_success">绑卡成功</string>
    <string name="helpcenter_title">帮助中心</string>
    <string name="account_title">我的账户</string>
    <string name="account_vip_level">VIP %1$d</string>
    <string name="account_all_asset">我的资产(元)</string>
    <string name="account_collecting_income">待到账收益(元)</string>
    <string name="account_total_income">已收收益(元)</string>
    <string name="account_use_money">可用余额(元)</string>
    <string name="account_recharge">充值</string>
    <string name="account_withdraw">提现</string>
    <string name="account_asset_statistics">资产统计</string>
    <string name="account_invest_manage">投资管理</string>
    <string name="account_payment_plan">回款计划</string>
    <string name="account_log">资金记录</string>
    <string name="account_to_transfer">我要转让</string>
    <string name="account_to_auto">自动投标</string>
    <string name="account_my_red_packet">我的红包</string>
    <string name="account_exp">体验金</string>
    <string name="account_score_log">积分记录</string>
    <string name="account_slb">生利宝</string>
    <string name="account_loan_manage">借款管理</string>
    <string name="account_repayment_manage">还款管理</string>
    <string name="account_mall">积分商城</string>
    <string name="account_task">我的任务</string>
    <string name="account_risk">风险评测</string>
    <string name="account_realname_no">您尚未开通支付账户，请开通</string>
    <string name="account_authorize_no">您尚未授权，请授权</string>
    <string name="account_bank_no">您尚未绑卡，请绑卡</string>
    <string name="account_pswd_no">您尚未设置支付密码，请设置</string>
    <string name="payment_account_realname">开通实名账户</string>
    <string name="authorize">授权</string>
    <string name="ir_title">投资管理</string>
    <string name="ir_detail">详情</string>
    <string name="ir_xy">协议</string>
    <string name="ir_hkjl">回款记录</string>
    <string name="ir_hkzzhye">回款到账户余额</string>
    <string name="ir_period">第%1$s期</string>
    <string name="coupon_title">我的红包</string>
    <string name="coupon_myexp">我的体验金</string>
    <string name="coupon_tips">温馨提示：投资可使用红包额度=投标金额*5%，一次可使用多个红包。</string>
    <string name="coupon_optional">红包总额：%1$s 元</string>
    <string name="coupon_selected">已选红包：%1$s 元</string>
    <string name="up_optional">可选加息券：%1$s 张</string>
    <string name="up_selected">已选加息券：%1$s 张</string>
    <string name="exp_optional">可选体验券：%1$s 张</string>
    <string name="exp_selected">已选体验券：%1$s 元</string>
    <string name="coupon_redpacke">红包</string>
    <string name="coupon_experience">体验券</string>
    <string name="coupon_uprate">加息券</string>
    <string name="coupon_exchange">兑换</string>
    <string name="coupon_exchange_dialog">确认兑换红包？</string>
    <string name="payment_record_title">回款记录</string>
    <string name="payment_record_period">第%1$s期（共%2$s期）</string>
    <string name="cashvalue_recode_title">充值提现记录</string>
    <string name="score_log_title">积分记录</string>
    <string name="score_log_scores">您的当前积分有</string>
    <string name="recharge_limit_tip1">银行</string>
    <string name="recharge_limit_tip2">单笔限额(元)</string>
    <string name="recharge_limit_tip3">每日限额(元)</string>
    <string name="recharge_limit_tip4">每月限额(元)</string>
    <string name="auto_detail_money">投资金额:</string>
    <string name="auto_detail_time">投资时间:</string>
    <string name="auto_detail_apr">年化收益:</string>
    <string name="auto_detail_style">还款方式:</string>
    <string name="auto_detail_button">修改参数</string>
    <string name="payment_account_tips">为了保障您的资金安全，请提供真实信息</string>
    <string name="payment_account_input_realname">请输入您的真实姓名</string>
    <string name="payment_account_input_id_card">请输入您的身份证号</string>
    <string name="payment_account_submit">确认开通</string>
    <string name="payment_account_prompt">温馨提示：支付密码在首次开通托管账户时会以短信的形式发送到您的手机</string>
    <string name="feedback_et_content_hint">告诉我们您的问题、建议和意见，帮助我们更好的优化产品。</string>
    <string name="feedback_et_phone">请留下您的手机号码，以便我们联系您。</string>
    <string name="feedback_tv_title">您还可以通过其他方式反馈：</string>
    <string name="feedback_call">拨打客服热线</string>
    <string name="feedback_call_phone">4006069129</string>
    <string name="feedback_wechat">关注微信公众平台</string>
    <string name="feedback_wechat_code">中企票e通</string>
    <string name="security_product1">项目审核</string>
    <string name="security_product2">项目审核多重审核、严谨透明</string>
    <string name="security_cash1">资金保护</string>
    <string name="security_cash2">第三方资金存管，安全放心</string>
    <string name="security_web1">网站建设</string>
    <string name="security_web2">银行级别的投资安全保障</string>
    <string name="security1">安全透明</string>
    <string name="security2">稳定经营</string>
    <string name="security3">资质优良</string>
    <string name="risk_title1">1 尽职调查与资信评估</string>
    <string name="risk_content1">对借款人及项目进行全方位实地尽职调查，严格审核企业基本信息、贷款卡记录、企业资产与负债，并通过借款人收入情况及资产情况对借款人资信情况做相应评估。</string>
    <string name="risk_title2">2 贷后管理持续跟踪</string>
    <string name="risk_content2">贷后管理细致入微，项目跟踪到还款最后一秒，定期检查与不定期检查相结合，线下公司自查与风控人员专人检查相结合，风险控制贯穿项目始终。</string>
    <string name="risk_title3">3 风险预警提前处置</string>
    <string name="risk_content3">结合贷后管理情况及其他渠道信息反馈，及早发现融资人风险，及早进行预警，及早排除资金风险。</string>
</resources>