<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="viewModel"
            type="com.rd.zhongqipiaoetong.module.account.viewmodel.BankCardBindVM" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorGrey"
        android:orientation="vertical">

        <include
            android:id="@+id/titleBar"
            layout="@layout/appbar_layout" />

        <TextView
            style="@style/TipsTheme"
            android:text="@string/bc_tip" />

        <LinearLayout style="@style/WhiteSelectorLayoutThemeLineLeft">

            <TextView
                style="@style/TextViewThemeBlack"
                android:layout_weight="3"
                android:text="@string/bc_realname" />

            <TextView
                style="@style/EditTextThemeLine"
                android:layout_weight="1"
                android:text="@{viewModel.initialAddBank.realName}" />

        </LinearLayout>

        <LinearLayout style="@style/WhiteSelectorLayoutThemeLineLeft">

            <TextView
                style="@style/TextViewThemeBlack"
                android:layout_weight="3"
                android:text="@string/bc_bankname" />

            <TextView
                android:id="@+id/bankname"
                style="@style/EditTextThemeLine"
                android:layout_weight="1"
                android:hint="@string/bc_bankname_hint"
                android:onClick="@{viewModel.banknameClick}" />
        </LinearLayout>

        <LinearLayout style="@style/WhiteSelectorLayoutThemeLineLeft">

            <TextView
                style="@style/TextViewThemeBlack"
                android:layout_weight="3"
                android:text="@string/bc_bank_card_num" />

            <EditText
                android:id="@+id/bank_card_num"
                style="@style/EditTextThemeLine"
                android:layout_weight="1"
                android:hint="@string/bc_bank_card_num_hint"
                android:imeOptions="actionNext"
                android:inputType="number"

                />
        </LinearLayout>

        <LinearLayout style="@style/WhiteSelectorLayoutThemeLineLeft"
            android:visibility="gone">

            <TextView
                style="@style/TextViewThemeBlack"
                android:layout_weight="3"
                android:text="@string/bc_area" />

            <TextView
                android:id="@+id/bankarea"
                style="@style/EditTextThemeLine"
                android:layout_weight="1"
                android:hint="@string/bc_area_hint"
                android:onClick="@{viewModel.areaClick}" />
        </LinearLayout>

        <LinearLayout style="@style/WhiteLayoutTheme"
            android:visibility="gone">

            <TextView
                style="@style/TextViewThemeBlack"
                android:layout_weight="3"
                android:text="@string/bc_branch" />

            <EditText
                style="@style/EditTextTheme"
                android:layout_weight="1"
                android:hint="@string/bc_branch_hint"
                android:imeOptions="actionDone" />
        </LinearLayout>

        <com.rd.zhongqipiaoetong.view.NoDoubleClickButton
            style="@style/FilletBtnStyle"
            android:layout_marginLeft="@dimen/x20"
            android:layout_marginRight="@dimen/x20"
            android:layout_marginTop="@dimen/x50"
            android:enabled="@{viewModel.enable}"
            android:onClick="@{viewModel.submit}"
            android:text="@string/bc_submit" />
    </LinearLayout>
</layout>